Estrutura básica da página.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Tabuada</title>
   </head>
   <body>
-    <h1>Olá, mundo!</h1>
+    <header>
+      <h1>Tabuada</h1>
+    </header>
+    <main>
+      <h2>Olá, mundo!</h2>
+    </main>
+    <footer>
+      <p>desenvolvido por <a href="https://github.com/umluizlima/" target="_blank" rel="noopener">umluizlima</a></p>
+      <p>disponível no <a href="https://github.com/umluizlima/tabuada/" target="_blank" rel="noopener">Github</a></p>
+    </footer>
   </body>
 </html>
