--- a/index.html
+++ b/index.html
@@ -2,18 +2,28 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Tabuada</title>
+    <meta name="author" content="Luiz Lima">
+    <meta name="description" content="Um jogo para praticar a tabuada.">
+
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <header>
       <h1>Tabuada</h1>
     </header>
+
     <main>
       <h2>Olá, mundo!</h2>
     </main>
+
     <footer>
       <p>desenvolvido por <a href="https://github.com/umluizlima/" target="_blank" rel="noopener">umluizlima</a></p>
       <p>disponível no <a href="https://github.com/umluizlima/tabuada/" target="_blank" rel="noopener">Github</a></p>
     </footer>
+
+    <script type="text/javascript" src="./js/app.js"></script>
   </body>
 </html>
